--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ sysinfo.txt
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+################################## Data ########################################
+
+PythonFiles/ML\ code/data/Image_3D/Stevens_PBC_INS1e_25mMglu+Ex-4_5min_1083_16-17_pre_rec.nii.gz
+PythonFiles/ML\ code/scripts/models/
