Update gitignore for generated files

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ sysinfo.txt
 !.vscode/launch.json
 !.vscode/extensions.json
 
+################################## Python ######################################
+
+*.pyc
+
 ################################## Data ########################################
 
 PythonFiles/ML\ code/data/Image_3D/Stevens_PBC_INS1e_25mMglu+Ex-4_5min_1083_16-17_pre_rec.nii.gz
