Update .gitignore to ignore .DS_Store files

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ sysinfo.txt
 
 PythonFiles/ML\ code/data/Image_3D/Stevens_PBC_INS1e_25mMglu+Ex-4_5min_1083_16-17_pre_rec.nii.gz
 PythonFiles/ML\ code/scripts/models/
+
+
+.DS_Store
