--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ sysinfo.txt
 
 PythonFiles/ML\ code/data/Image_3D/Stevens_PBC_INS1e_25mMglu+Ex-4_5min_1083_16-17_pre_rec.nii.gz
 PythonFiles/ML\ code/scripts/models/
+png_img_data/
 
 
 .DS_Store
