--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,5 @@ sysinfo.txt
 ################################## Data ########################################
 
 PythonFiles/ML\ code/data/Image_3D/Stevens_PBC_INS1e_25mMglu+Ex-4_5min_1083_16-17_pre_rec.nii.gz
+PythonFiles/ML\ code/data/Image_2D/*
 PythonFiles/ML\ code/scripts/models/
