Ignore model report files

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ PythonFiles/ML\ code/data/Image_2D/*
 PythonFiles/ML\ code/scripts/models/
 png_img_data/
 PythonFiles/models/*
-
+UnityProject/Assets/Resources/data/reports/*
 .DS_Store
 
 
