--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ sysinfo.txt
 ################################## Python ######################################
 
 *.pyc
+.ipynb_checkpoints
 
 ################################## Data ########################################
 
