updates gitingore to to ignore player_data.txt
This is because we want to be able to have different image locations in our different machines.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ UnityProject/Assets/Resources/data/reports/*
 UnityProject/Assets/TextMesh\ Pro/*
 UnityProject/Assets/TextMesh\ Pro.meta
 PythonFiles/.python-version
+UnityProject/Assets/Resources/data/player_data.txt
