Add pruning model and remember previous runs

--- a/PythonFiles/config.properties
+++ b/PythonFiles/config.properties
@@ -1,2 +1,12 @@
-prune=1
 has_pretrain_data=1
+num_of_pretrain_data=800
+pretrain_split=80
+pretrain_batch_size=10
+pretrain_epochs=1
+pretrain_predict_batch=2
+num_of_play_data=800
+play_batch_size=10
+play_epochs=1
+num_of_test_data=400
+evaluate_batch_size=10
+prune=1
